[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Ends.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Ends.gd" type="Script" id=2]
[ext_resource path="res://assets/tf2Hitsound.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/AmongUsImpostorSoundEffect.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.5, 61 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.07018, 4.69514 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -38 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "dies"
tracks/0/type = "value"
tracks/0/path = NodePath("VenonAni:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 2.297 ), Vector2( 0.5, 2.297 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Ends" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 2.29688 )
scale = Vector2( 0.2, 0.2 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="EndsAni" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 14 )
shape = SubResource( 1 )

[node name="HeadshotDetector" type="Area2D" parent="."]
modulate = Color( 0.168627, 0.152941, 0.635294, 1 )
position = Vector2( 0.5, 16.5 )
scale = Vector2( 2.85, 2.05 )
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadshotDetector"]
position = Vector2( 3.68421, -28.7195 )
scale = Vector2( 1, 0.999999 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
position = Vector2( 6.19888e-06, 63 )
scale = Vector2( 7.5, 1.6 )
physics_process_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/RESET = SubResource( 4 )
anims/dies = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -20.8

[connection signal="body_entered" from="HeadshotDetector" to="." method="_on_HeadshotDetector_body_entered"]
